--- a/fontawesome/css/stylehome.css
+++ b/fontawesome/css/stylehome.css
@@ -35,6 +35,12 @@ section{
 body {
     min-height: 500px;;
   }
-  
+  .card {
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
  
   
